CM-1068: Fix label spacing issue

--- a/src/gatsby/src/styles/search.scss
+++ b/src/gatsby/src/styles/search.scss
@@ -1358,7 +1358,7 @@ a.desktop-park-link {
       height: auto;
       position: absolute;
       top: 12px;
-      left: 18px;
+      left: 16px;
       color: $colorGreyMed;
       border: none;
       margin: 0;
